--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         tools:replace="android:icon">
 
         <activity android:name=".LoginActivity" />
+        <activity android:name=".DoctorProfileActivity" />
         <activity android:name=".DoctorHomeActivity" />
         <activity android:name=".Appointments" />
         <activity android:name=".AdminHomeActivity" />
@@ -41,6 +42,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
     </application>
 
